# McpServer

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  README.md  config.json  research.md  researchAgent.md  vcpkg.json
.claude/agents/: startMcp.md  stopMcp.md
.claude/skills/start-mcp-agent/: SKILL.md
.claude/skills/stop-mcp-server/: SKILL.md
agent/: README.md  __init__.py  config.py  config.yaml  pyproject.toml
agent/cli/: __init__.py  commands.py  display.py  main.py
agent/core/: __init__.py  agent_engine.py  conversation.py  tools.py
agent/examples/: basic_usage.py  test_rag.py  test_rag_simple.py  test_rag_with_agent.py
agent/hr/: __init__.py  engine.py  mcp_handler.py  types.py
agent/hr/matcher/: engine.py  scorer.py
agent/hr/parser/: base.py  jd_parser.py  resume_parser.py
agent/hr/store/: base.py  jd_store.py  resume_store.py
agent/hr/tests/: test_config.py  test_hr_engine.py  test_jd_parser.py  test_jd_store.py  test_matcher_engine.py  test_mcp_handler.py  test_resume_parser.py  test_resume_store.py  test_scorer.py  test_types.py
agent/llm/: __init__.py  ollama_client.py  prompt_builder.py  response_parser.py
agent/llm/tests/: test_response_parser.py
agent/mcp/: __init__.py  client.py  types.py
agent/memory/: __init__.py  types.py
agent/memory/integration/: __init__.py  memory_orchestrator.py
agent/memory/long_term/: __init__.py  memory_classifier.py  memory_store.py
agent/memory/short_term/: __init__.py  importance_scorer.py  memory_manager.py  summarizer.py
agent/rag/: __init__.py  types.py
agent/rag/core/: rag_engine.py
agent/rag/embeddings/: base.py  ollama_embedder.py
agent/rag/loaders/: base.py  document_loader.py  factory.py
agent/rag/processors/: chinese_optimizer.py  chunker.py  preprocessor.py
agent/rag/storage/: chroma_store.py
config/: Config.cpp  Config.h
docs/: 01_logical_view.puml  02_process_view.puml  03_implementation_view.puml  04_deployment_view.puml  05_usecase_view.puml  06_sequence_diagram.puml  07_flow_diagram.puml  08_react_flow_diagram.puml  09_react_sequence_diagram.puml  10_rag_flow_diagram.puml  11_rag_add_document_flow.puml  12_rag_query_retrieval_flow.puml  13_memory_flow_diagram.puml  14_memory_sequence_diagram.puml  MEMORY_SYSTEM_GUIDE.md  RAG_CORE_LOGIC.md  RAG_DETAILED_GUIDE.md  RAG_USAGE.md  REACT_PATTERN_GUIDE.md
docs/jsonrpc/: README.md  http_jsonrpc_server_architecture.puml  http_jsonrpc_server_docs.md  http_jsonrpc_server_flow.puml  http_jsonrpc_server_sequence.puml  http_jsonrpc_server_state.puml  jsonrpc_data_flow.puml  jsonrpc_interaction_sequence.puml  jsonrpc_overview.puml  jsonrpc_sequence.puml  jsonrpc_usage.puml
docs/superpowers/specs/: 2026-05-04-hr-resume-agent-design.md
scripts/: install_hooks.sh  pre-push  run_all_tests.sh
src/: main.cpp
src/json_rpc/: http_jsonrpc_server.cpp  http_jsonrpc_server.h  jsonrpc.cpp  jsonrpc.h  jsonrpc_serialization.cpp  jsonrpc_serialization.h  stdio_jsonrpc.cpp  stdio_jsonrpc.h
src/logger/: LogMacros.h  Logger.cpp  Logger.h
src/mcp/: McpServer.cpp  McpServer.h  McpServerRunner.cpp  McpServerRunner.h  PromptManager.cpp  PromptManager.h  ResourceManager.cpp  ResourceManager.h  ToolManager.cpp  ToolManager.h  types.h
tests/: __init__.py  conftest.py  test_http_jsonrpc_server.cpp  test_jsonrpc.cpp  test_logger.cpp  test_mcp_server.cpp  test_stdio_jsonrpc.cpp
tests/integration/: __init__.py
tests/unit/: __init__.py  test_mcp_client.py
