[project]
name = "mcp-agent"
version = "0.1.0"
description = "Python MCP Agent for C++ MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "ollama>=0.4.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.4.0",
    "jieba>=0.42.0",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "python-docx>=1.1.0",
    "lxml>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-agent = "agent.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
